--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "dom-store",
   "version": "0.0.0",
-  "description": "[TOC]",
-  "main": "custom_appender.js",
+  "description": "",
   "scripts": {
+    "dev": "next",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -17,9 +17,12 @@
   },
   "homepage": "https://github.com/askirmas/stateful-dom#readme",
   "devDependencies": {
+    "@types/node": "^14.0.25",
+    "@types/react": "^16.9.43",
     "next": "^9.4.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "road-dropdown": "^1.0.8",
     "typescript": "^3.9.7"
   }
 }
